# MiniECS

./: .clang-format  CMakeLists.txt  ComponentRegistry.cpp  ComponentRegistry.h  Components.cpp  Components.h  ECSManager.cpp  ECSManager.h  Entity.cpp  Entity.h  EntityManager.cpp  EntityManager.h  Game.cpp  Game.h  Helpers.cpp  Helpers.h  Vec2.cpp  Vec2.h  main.cpp
